Add style tree generation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  <div id='content'>
+  <div class='content'>
     <a href='google.com'>Google</a>
+  </div>
+  <div>
+    Hello
   </div>
 </html>
